# CommonFunctions

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  cloudflare_storage_cost_estimate.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: api-docs-auto-update.yml  api-docs-check.yml
docs/: API_REFERENCE.html
docs/plans/: 2026-03-15-domain-redirect-detection.md
docs/specs/: 2026-03-15-domain-redirect-detection-design.md
millionverifierlists/: README.md
millionverifierlists/lists/: 2025-02-27_Neocase_EmailScan_FULL_REPORT_MILLIONVERIFIER.COM.csv  96559AdditionalEmailsForChecking_FULL_REPORT_MILLIONVERIFIER.COM.csv  96559AdditionalEmailsForChecking_FULL_REPORT_MILLIONVERIFIER.COM.xls  BursarEmailReportedAsDeadByEmailListVerifyToSendToMillionVerifierToCheck.csv  BursarNewEdForMW2_FILTERED_MILLIONVERIFIER.COM.csv  BursarNewEdForMW_FILTERED_MILLIONVERIFIER.COM.csv  ClareEmailCheck_FULL_REPORT_MILLIONVERIFIER.COM.csv  ClaredEdDataToVerify_FULL_REPORT_MILLIONVERIFIER.COM.csv  ClientEmailsForCleaning_FULL_REPORT_MILLIONVERIFIER.COM.csv  CompaniesAndURLSAndEmails_FILTERED_MILLIONVERIFIER.COM.csv  CompaniesAndURLSAndEmails_FILTERED_MILLIONVERIFIER.csv  DomainsWithoutHead_FILTERED_MILLIONVERIFIER.COM.csv  (+27 more)
scripts/: build_domain_ratings_dataset.py  generate_api_docs.py  sync_disposable_domains_to_d1.py  sync_domain_ratings_to_d1.py
sql/: d1_disposable_domains_schema.sql  d1_domain_ratings_schema.sql
tests/: test_domain_ratings.py  test_email_utils.py  test_hunter.py  test_lookups.py  test_redirects.py
(+9 files in other folders)
